--- a/nbs/src/core.ipynb
+++ b/nbs/src/core.ipynb
@@ -53,7 +53,7 @@
     "from narwhals.typing import Frame, FrameT\n",
     "from scipy.stats import norm\n",
     "from scipy import sparse\n",
-    "from typing import Optional\n",
+    "from typing import Optional, Any\n",
     "\n",
     "import narwhals as nw\n",
     "import numpy as np"
@@ -636,6 +636,89 @@
    "outputs": [],
    "source": [
     "show_doc(HierarchicalReconciliation.bootstrap_reconcile, name='bootstrap_reconcile', title_level=3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#| export\n",
+    "class HierarchicalForecast:\n",
+    "    \n",
+    "    def __init__(self,\n",
+    "                 models: dict[str, list[Any]],\n",
+    "                 reconcilers: list[HReconciler],\n",
+    "                 tags_te: Optional[dict[str, np.ndarray]] = None,\n",
+    "                 ):\n",
+    "        \"\"\"\n",
+    "        The `core.HierarchicalForecast` class allows you to efficiently fit multiple Neural-, Stats- or \n",
+    "        MLForecast models for large sets of time series and hierarchically reconciled them. \n",
+    "\n",
+    "        Parameters\n",
+    "        ----------\n",
+    "        models : dict\n",
+    "            Dictionary that maps the aggregation tags to an instantiated list of models \n",
+    "            that will be fitted to the time series.\n",
+    "        reconcilers : list\n",
+    "            List of instantiated classes of the [reconciliation methods](https://nixtla.github.io/hierarchicalforecast/methods.html) module.\n",
+    "        tags_te : dict (default=None)\n",
+    "            Each key is a temporal aggregation level and its value contains columns associated to that level.\n",
+    "        \n",
+    "        Returns\n",
+    "        -------\n",
+    "        self : HierarchicalForecast\n",
+    "            Returns instantiated `HierarchicalForecast` class.\n",
+    "        \"\"\"        \n",
+    "        # Check temporal tags validity\n",
+    "        self._check_tags(models, tags_te)\n",
+    "\n",
+    "        self.models = models\n",
+    "        self.reconcilers = reconcilers\n",
+    "        self.tags_te = tags_te\n",
+    "        \n",
+    "    @staticmethod\n",
+    "    def _check_tags(models: dict[str, list[Any]], \n",
+    "                    tags: Optional[dict[str, np.ndarray]] = None):\n",
+    "        \"\"\"\n",
+    "        Check tags validity.\n",
+    "        \"\"\"\n",
+    "        if tags is not None:\n",
+    "            missing_models = set(tags.keys()) - set(models.keys())\n",
+    "            if len(missing_models) > 0:\n",
+    "                raise ValueError(f'You should include a model for the following aggregation tags: {reprlib.repr(missing_models)}')\n",
+    "            missing_tags = set(models.keys()) - set(tags.keys())\n",
+    "            if len(missing_tags) > 0:\n",
+    "                raise ValueError(f'You have included a model for the following unknown aggregation tags: {reprlib.repr(missing_tags)}')\n",
+    "\n",
+    "    def fit(self,\n",
+    "        df: Frame,\n",
+    "        id_col: str = 'unique_id',\n",
+    "        time_col: str = 'ds',\n",
+    "        target_col: str = 'y',\n",
+    "    ) -> None:\n",
+    "        \"\"\"Fit the core.HierarchicalForecast.\n",
+    "\n",
+    "        Fit `models` to a large set of time series from DataFrame `df`.\n",
+    "        and store fitted models for later inspection.\n",
+    "\n",
+    "        Parameters\n",
+    "        ----------\n",
+    "        df : DataFrame\n",
+    "            DataFrame with columns [id_col, time_col, target_col] and exogenous variables.\n",
+    "        id_col : str (default='unique_id')\n",
+    "            Column that identifies each serie.\n",
+    "        time_col : str (default='ds')\n",
+    "            Column that identifies each timestep, its values can be timestamps or integers.\n",
+    "        target_col : str (default='y')\n",
+    "            Column that contains the target.\n",
+    "\n",
+    "        Returns\n",
+    "        -------\n",
+    "        self : HierarchicalForecast\n",
+    "            Returns `HierarchicalForecast` class with fitted `models`.\n",
+    "        \"\"\"    "
    ]
   },
   {
